--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <main>
         <section id="tela">
+            <iframe id="frame" name="tela"src="pag001.html" frameborder="0"></iframe>
         </section>
         <section id="redes">
             <ul>
                 
                 <li>
-                    <a href="#"> <img src="imagens/logo-home.jpg" alt="Home">  </a>
+                    <a href="index.html"> <img src="imagens/logo-home.jpg" alt="Home">  </a>
                 </li>
                 <li>
                     <a href="#"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
